# elysium-crafting-helper

./: LICENSE  README.md  docker-compose.yml  index.html  package.json
.github/aur/: PKGBUILD.template
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD  test-install.sh
scripts/: prepare_release.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/mod_loader/: fabric.rs  kubejs.rs  mod.rs  model_resolver.rs  texture_renderer.rs  types.rs  vanilla.rs
src-tauri/src/recipe/: loader.rs  mod.rs  vanilla_json.rs
src/components/CraftingArea/: CraftingArea.tsx  CraftingGrid.tsx  GridSlot.tsx
src/components/CraftingArea/grids/: crafting-table.ts  registry.ts  types.ts
src/components/ItemBrowser/: ItemBrowser.tsx  ItemCard.tsx  ModGroup.tsx
src/components/RecipeBrowser/: RecipeBrowser.tsx  RecipeCard.tsx
src/components/Toolbar/: Toolbar.tsx
src/hooks/: useCraftingGrid.ts  useDragContext.tsx  useMods.ts  useRecipes.ts
src/types/: item.ts  recipe.ts
