[package]
name = "elysium-crafting-helper"
version = "1.0.2"
description = "A minecraft crafting generator application"
authors = [ "Brodino" ]
edition = "2021"
license = "MIT"
repository = "https://github.com/Brodino96/elysium-crafting-helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "elysium_crafting_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "8.5.1"
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.0"
regex = "1.12.3"
walkdir = "2.5.0"
image = "0.25"
rayon = "1.10"
